--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         id="WebApp_ID" version="2.5">
 
-<web-app>
   <display-name>Archetype Created Web Application</display-name>
-
+  <!-- spring转码 -->
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -22,11 +23,11 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-
+  <!--监听web容器启动事件-->
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
-
+  <!--web容器和spring容器整合的监听器-->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
@@ -37,18 +38,23 @@
     </param-value>
   </context-param>
 
+  <!--springMVC配置-->
   <servlet>
-    <servlet-name>dispatcher</servlet-name>
+    <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!--配置springMVC的初始配置文件，默认是/WEB-INF/dispatcher-servlet.xml-->
+    <init-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:dispatcher-servlet.xml</param-value>
+    </init-param>
+    <!--容器启动时初始化-->
     <load-on-startup>1</load-on-startup>
   </servlet>
 
-
-
   <servlet-mapping>
-    <servlet-name>dispatcher</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <servlet-name>springmvc</servlet-name>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
-
 </web-app>
+
