--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,11 @@
         <!--</dependency>-->
 
 
+        <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
         <dependency>
-            <groupId>com.mchange</groupId>
+            <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.5.2</version>
+            <version>0.9.1.2</version>
         </dependency>
 
 
